platform_versioned_docs/version-4.12.0/configure/platform-configs/audit.mdx
---
title: Audit Logging
sidebar_label: Audit Logging
sidebar_position: 2
sidebar_class_name: pro
description: Learn how to enable and configure audit logging to track activities in the platform, including management instance changes and cluster operations.
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import ConfigureAuditLevelsUI from "../../_partials/guides/configure-audit-levels-ui.mdx";
import ConfigureAuditLevelsHelm from "../../_partials/guides/configure-audit-levels-helm.mdx";
import FeatureTable from '@site/src/components/FeatureTable';
import GlossaryTerm from '@site/src/components/GlossaryTerm';

<FeatureTable names="audit-logging" />


## Overview

Audit logging in the platform provides a security-relevant, chronological set of records documenting the sequence of actions. It audits activities generated by users and applications that use the platform API.

The platform can log activities related to:

- Management instance changes, such as creation of new tenant clusters, spaces, and so on.
- Changes within a <GlossaryTerm term="tenant-cluster">tenant cluster</GlossaryTerm> or space
- Changes within a connected cluster

Auditing in the platform is similar to [auditing Kubernetes clusters](https://kubernetes.io/docs/tasks/debug-application-cluster/audit/) in general.

Each request on each stage of its execution generates an audit event, which is then pre-processed according to a certain policy and written to a backend (currently only log backends are supported). The policy determines what's recorded and the backends persist the records.

Each request can be recorded with an associated stage. The defined stages are:

- `RequestReceived`: The stage for events generated as soon as the audit handler receives the request, and before it is delegated down the handler chain.
- `ResponseComplete`: The response body has been completed and no more bytes are sent.
- `Panic`: Events generated when a panic occurred.

The audit logging feature increases the memory consumption of the platform because some context required for auditing is stored for each request. Memory consumption depends on the audit logging configuration.

## Enable auditing

:::info Two separate audit fields
`values.yaml` has two distinct `audit` fields with different purposes:

- **`audit`** (top-level Helm value) — configures the audit sidecar and log persistence (PVC) for the platform pod. This is a Helm-only setting. Changes require a Helm upgrade and a platform restart.
- **`config.audit`** (under the `config` section) — controls audit recording and policy, and enables the Audit Log UI. This can be set in **Platform > Platform Config > Config** in the UI or under `config` in `values.yaml`. `config.audit.enabled` defaults to `true`, so audit events are recorded without any additional configuration.

Changes to `config.audit` made through the UI take effect automatically within about 10-15 seconds, no restart required. Changing `config.audit` through a Helm upgrade also restarts the platform pod, since the chart stamps the pod template with a config hash. The setting itself still takes effect through the same hot-reload mechanism either way.
:::

Configure auditing through the platform config in the platform UI (**Platform > Platform Config > Config**). Content added in the UI goes automatically under the `config` section of `values.yaml`.

An example configuration could look like:

```yaml title="Example audit configuration in platform UI"
audit:
  enabled: true
  level: 1
```

See the [complete list of fields](../../api/resources/config.mdx#status-audit) under the `config.audit` section of `values.yaml`.

## Audit levels

The platform provides audit levels, which are preconfigured audit policies for the most common use cases. These levels range from 1 to 4 where 1 logs the fewest requests, while 4 logs the most:

- **Level 1**: Logs modifying requests such as creation, modification, or deletion of any objects. Creation requests also log the request payload.
- **Level 2**: Like Level 1 but also logs the metadata of reading requests, such as listing pods inside a tenant cluster or space. Reading requests won't log the response or request payload and instead only the metadata, such as request origin and target.
- **Level 3**: Like Level 2 but instead of only logging the request metadata, also logs the complete request payload sent to the platform.
- **Level 4**: Like Level 3 but instead of only logging metadata and request payload, also logs the response the platform has sent to the requester.

Captured payloads are normalized to JSON and size-limited before storage. Unconvertible or oversized payloads are omitted with an annotation. See [Request and response payload storage](#request-and-response-payload-storage).

Every level also applies a fixed set of exclusions and downgrades for internal, high-volume, or credential-carrying requests, on top of the level's own rules. See [Default policy exclusions](#default-policy-exclusions) for what's affected and why. A [custom audit policy](#audit-policy) is the only way to change this behavior, and it replaces these defaults entirely rather than layering on top of them.

Configure the audit level through the platform config, which can be modified either through the platform UI or Helm:

<Tabs
  defaultValue="ui"
  values={[
    { label: "UI", value: "ui" },
    { label: "Helm", value: "Helm" },
  ]}
>
  <TabItem value="ui">
    <ConfigureAuditLevelsUI />
  </TabItem>
  <TabItem value="Helm">
    <ConfigureAuditLevelsHelm />
  </TabItem>
</Tabs>

## Request and response payload storage

Audit levels and custom policies both determine payload storage through one of four granularity settings. `Request` stores the request payload. `RequestResponse` also stores the response payload. See [Audit policy](#audit-policy) for the full list.

The platform stores payloads for resource requests only. Long-running requests, such as log streaming, never store payloads. Creates of sensitive resources, such as shared secrets and access keys, keep metadata-only events on every level. See [Default policy exclusions](#default-policy-exclusions) for the full list of affected resources and why.

The platform always stores payloads as JSON:

- Payloads that arrive as plain JSON are stored unchanged.
- Gzip-compressed request and response bodies are stored in their decompressed form.
- Payloads sent in the Kubernetes Protobuf format are converted to their JSON equivalent for known Kubernetes API types. The stored payload matches what a JSON client would have sent.

### Payload size limit

The platform captures at most 2 MiB per request or response payload. It doesn't store payloads above this limit.

### Omitted payloads

When the platform can't store a payload, it keeps the audit event with all of its metadata but leaves out the payload. The event then carries an annotation that names the omission reason:

- `audit.platform.vcluster.com/request-object-omitted` for the request payload
- `audit.platform.vcluster.com/response-object-omitted` for the response payload

The following reasons can appear as annotation values:

| Reason | Description |
|--------|-------------|
| `truncated` | The payload exceeded the capture limit, so the platform captured only a partial copy. |
| `too-large` | The payload exceeded the capture limit after decompression or conversion to JSON. |
| `decode-failed` | The platform couldn't decompress or decode the payload. |
| `unsupported-encoding` | The payload used a content encoding or media type that the platform can't convert to JSON. |
| `invalid-json` | The payload wasn't valid JSON and not in any recognized format. |

## Audit policy

Audit policy is a more complex alternative to audit levels, letting you define exact rules about what events should be recorded and what data they should include. When an event is processed, it's compared against the list of rules in order. The first matching rule sets the audit granularity of the event. The defined audit granularity options are:

- `None`: Don't log events that match this rule.
- `Metadata`: Log request metadata (requesting user, timestamp, resource, verb, and so on) but not request or response body.
- `Request`: Log event metadata and request body but not response body. This doesn't apply for non-resource requests.
- `RequestResponse`: Log event metadata, and request and response bodies. This doesn't apply for non-resource requests.

:::warning Custom rules replace the defaults entirely
Setting a non-empty `policy.rules` list under `config.audit` replaces the resolved default policy outright, and the platform then ignores the `level` field. None of the [default policy exclusions](#default-policy-exclusions) apply automatically. Start from the [default rules for a level](#default-policy-rules-by-level) and add to them, rather than writing a custom policy from scratch. An empty `rules: []` list doesn't count as a custom policy: the platform still resolves and applies the configured level's defaults.
:::

An example policy that catches all requests:

```yaml title="Example audit policy in values.yaml"
config:
  audit:
    enabled: true
    policy:
      rules:
        - level: Metadata
          omitStages:
            - RequestReceived
```

See the [complete policy reference](../../api/resources/config.mdx#status-audit-policy).

## Default policy exclusions

Before a request reaches an audit level's own rules, three built-in rules run first, in this order. Because the platform uses the first matching rule, these built-ins take priority over anything the level would otherwise log. They apply to all four audit levels.

### Never logged

The platform never logs these requests, at any level, including level 4:

| Resource | API group | Why |
|---|---|---|
| `selfsubjectaccessreviews`, `subjectaccessreviews` | any | Permission checks the UI and CLI issue continuously to decide what to show. They aren't an action on a resource, and logging them would flood the audit log. |
| `agentauditevents` | `management.loft.sh` | The endpoint agents use to send their own audit events back to the platform (see [Audit logging for Regional Cluster Endpoints](#audit-logging-for-regional-cluster-endpoints)). Logging it would create an audit event about receiving an audit event. |
| `licensetokens`, `directclusterendpointtokens`, `ingressauthtokens` | `management.loft.sh` | Internal tokens validated on nearly every request. |
| `selves` | `management.loft.sh` | The endpoint the UI and CLI call to resolve the current user, requested on nearly every page load. |
| `virtualclusterinstances/kubeconfig` | `management.loft.sh` | Retrieving the kubeconfig for a tenant cluster. |

:::info No audit record of kubeconfig retrieval
Because `virtualclusterinstances/kubeconfig` is on the never-logged list, there's no audit record of who retrieved a tenant cluster's kubeconfig, or when, at any level. To get a `Metadata` record of these requests instead (who, when, which tenant cluster, without the returned credentials), remove `virtualclusterinstances/kubeconfig` from the never-logged resources in a [custom policy built from the defaults](#default-policy-rules-by-level). The [sensitive data rule](#metadata-only-for-sensitive-data) then takes over and audits it at `Metadata`, since it already lists this resource.
:::

### Metadata-only for sensitive data

For `create` requests only, the platform always logs these resources at `Metadata`, never `Request` or `RequestResponse`, regardless of the configured level:

| Resource | API group | Why |
|---|---|---|
| `ownedaccesskeys`, `resetaccesskeys` | `management.loft.sh` | The response contains the access key value. |
| `sharedsecrets` | `management.loft.sh` | The request can contain the secret data. |
| `clusters` | `management.loft.sh` | Cluster registration includes a kubeconfig or connection token in the request. |
| `users/profile` | `management.loft.sh` | The request can contain a new password. |
| `virtualclusterinstances/kubeconfig` | `management.loft.sh` | The response contains a working kubeconfig. This rule only applies if you remove the resource from the never-logged list above, since that rule matches first. |
| `virtualclusterinstances/snapshotcredentials` | `management.loft.sh` | The response contains sensitive storage credentials. |

This keeps the event auditable (who did it, when, on which object) without writing the credential itself into the audit log, which is typically retained longer and read more widely than the underlying secret store.

### Metadata-only for long-running requests

| Resource | API group | Why |
|---|---|---|
| `pods/log`, `pods/exec`, `pods/portforward` | core (`""`) | Streaming requests inside a tenant cluster or connected cluster. There's no discrete response body to capture, and exec or port-forward would mean logging the interactive session traffic. |
| `virtualclusterinstances/log`, `appinstances/log` | `management.loft.sh` | Same reasoning, for log streaming through the platform API. |

## Default policy rules by level

Each audit level resolves to a fixed list of policy rules, evaluated in order, where the first match sets an event's granularity. Copy the rules for a level below as a starting point for a custom policy, then add, remove, or reorder rules to fit your needs. All four levels start with the same three rules, covered in [Default policy exclusions](#default-policy-exclusions), followed by level-specific rules for everything else.

<Tabs
  defaultValue="1"
  values={[
    { label: "Level 1", value: "1" },
    { label: "Level 2", value: "2" },
    { label: "Level 3", value: "3" },
    { label: "Level 4", value: "4" },
  ]}
>
  <TabItem value="1">

```yaml title="Level 1 default policy"
config:
  audit:
    policy:
      rules:
        - level: None
          resources:
            - group: "*"
              resources:
                - selfsubjectaccessreviews
                - subjectaccessreviews
            - group: management.loft.sh
              resources:
                - agentauditevents
                - licensetokens
                - directclusterendpointtokens
                - ingressauthtokens
                - selves
                - virtualclusterinstances/kubeconfig
        - level: Metadata
          omitStages:
            - RequestReceived
          verbs:
            - create
          resources:
            - group: management.loft.sh
              resources:
                - ownedaccesskeys
                - resetaccesskeys
                - sharedsecrets
                - clusters
                - users/profile
                - virtualclusterinstances/kubeconfig
                - virtualclusterinstances/snapshotcredentials
        - level: Metadata
          omitStages:
            - RequestReceived
          resources:
            - group: ""
              resources:
                - pods/log
                - pods/exec
                - pods/portforward
            - group: management.loft.sh
              resources:
                - virtualclusterinstances/log
                - appinstances/log
        - level: None
          verbs:
            - get
            - list
            - watch
        - level: Request
          omitStages:
            - RequestReceived
          verbs:
            - create
        - level: Metadata
          omitStages:
            - RequestReceived
```

  </TabItem>
  <TabItem value="2">

```yaml title="Level 2 default policy"
config:
  audit:
    policy:
      rules:
        - level: None
          resources:
            - group: "*"
              resources:
                - selfsubjectaccessreviews
                - subjectaccessreviews
            - group: management.loft.sh
              resources:
                - agentauditevents
                - licensetokens
                - directclusterendpointtokens
                - ingressauthtokens
                - selves
                - virtualclusterinstances/kubeconfig
        - level: Metadata
          omitStages:
            - RequestReceived
          verbs:
            - create
          resources:
            - group: management.loft.sh
              resources:
                - ownedaccesskeys
                - resetaccesskeys
                - sharedsecrets
                - clusters
                - users/profile
                - virtualclusterinstances/kubeconfig
                - virtualclusterinstances/snapshotcredentials
        - level: Metadata
          omitStages:
            - RequestReceived
          resources:
            - group: ""
              resources:
                - pods/log
                - pods/exec
                - pods/portforward
            - group: management.loft.sh
              resources:
                - virtualclusterinstances/log
                - appinstances/log
        - level: Request
          omitStages:
            - RequestReceived
          verbs:
            - create
        - level: Metadata
          omitStages:
            - RequestReceived
          resources:
            - group: "*"
              resources:
                - "*"
```

  </TabItem>
  <TabItem value="3">

```yaml title="Level 3 default policy"
config:
  audit:
    policy:
      rules:
        - level: None
          resources:
            - group: "*"
              resources:
                - selfsubjectaccessreviews
                - subjectaccessreviews
            - group: management.loft.sh
              resources:
                - agentauditevents
                - licensetokens
                - directclusterendpointtokens
                - ingressauthtokens
                - selves
                - virtualclusterinstances/kubeconfig
        - level: Metadata
          omitStages:
            - RequestReceived
          verbs:
            - create
          resources:
            - group: management.loft.sh
              resources:
                - ownedaccesskeys
                - resetaccesskeys
                - sharedsecrets
                - clusters
                - users/profile
                - virtualclusterinstances/kubeconfig
                - virtualclusterinstances/snapshotcredentials
        - level: Metadata
          omitStages:
            - RequestReceived
          resources:
            - group: ""
              resources:
                - pods/log
                - pods/exec
                - pods/portforward
            - group: management.loft.sh
              resources:
                - virtualclusterinstances/log
                - appinstances/log
        - level: Request
          omitStages:
            - RequestReceived
          resources:
            - group: "*"
              resources:
                - "*"
```

  </TabItem>
  <TabItem value="4">

```yaml title="Level 4 default policy"
config:
  audit:
    policy:
      rules:
        - level: None
          resources:
            - group: "*"
              resources:
                - selfsubjectaccessreviews
                - subjectaccessreviews
            - group: management.loft.sh
              resources:
                - agentauditevents
                - licensetokens
                - directclusterendpointtokens
                - ingressauthtokens
                - selves
                - virtualclusterinstances/kubeconfig
        - level: Metadata
          omitStages:
            - RequestReceived
          verbs:
            - create
          resources:
            - group: management.loft.sh
              resources:
                - ownedaccesskeys
                - resetaccesskeys
                - sharedsecrets
                - clusters
                - users/profile
                - virtualclusterinstances/kubeconfig
                - virtualclusterinstances/snapshotcredentials
        - level: Metadata
          omitStages:
            - RequestReceived
          resources:
            - group: ""
              resources:
                - pods/log
                - pods/exec
                - pods/portforward
            - group: management.loft.sh
              resources:
                - virtualclusterinstances/log
                - appinstances/log
        - level: RequestResponse
          omitStages:
            - RequestReceived
          resources:
            - group: "*"
              resources:
                - "*"
```

  </TabItem>
</Tabs>

## Persist audit logs

Persist platform audit logs in one of two ways: deploy the platform with a persistent volume claim (PVC), or connect the platform to a persistent database.

:::info HA only supported with persistent database
If you are running the platform in high availability (HA mode), the only way to persist audit logs is to use a persistent database. The PVC approach doesn't work.
:::

### Deploy the platform with a PVC to save audit logs

Create a new `values.yaml` with the following values:

```yaml title="values.yaml for PVC"
audit:
  persistence:
    enabled: true
    # size: 30Gi
```

This is the top-level `audit` field in `values.yaml`, not `config.audit` (see [Enable auditing](#enable-auditing) for the distinction).

Apply the values using Helm:

```bash title="Apply Helm values"
helm upgrade vcluster-platform vcluster-platform \
  --namespace vcluster-platform \
  --repo https://charts.loft.sh \
  --reuse-values \
  -f values.yaml
```

### Use a persistent database as platform audit backend

Instead of the internal sqlite storage (see [View and export audit logs](#view-and-export-audit-logs)), the platform can write audit events to a persistent MySQL or PostgreSQL database. This is a `config.audit` setting, so you can configure it through the platform UI or Helm.

Through the UI, go to **Platform > Platform Config > Config** and specify the following platform config setting:

```yaml title="Platform config for persistent database"
audit:
  dataStoreEndpoint: mysql://username:password@tcp(hostname:3306)/database-name
```

Through Helm, add the following to `values.yaml`:

```yaml title="values.yaml for persistent database"
config:
  audit:
    enabled: true
    dataStoreEndpoint: mysql://username:password@tcp(hostname:3306)/database-name
```

For PostgreSQL, use a `postgres://` endpoint instead:

```yaml title="values.yaml for a PostgreSQL audit datastore"
config:
  audit:
    enabled: true
    dataStoreEndpoint: postgres://username:password@hostname:5432/database-name
```

Apply the changes. Through the UI, they take effect automatically within about 10-15 seconds, with no platform restart required. Through Helm, `helm upgrade` restarts the platform pod as a side effect of the upgrade, though the setting itself takes effect through the same hot-reload mechanism either way.

#### IAM authentication instead of a static password

Set `config.audit.dataStoreIdentityProvider: aws` to authenticate with a short-lived IAM token instead of a static password. This works against a datastore with IAM database authentication enabled, such as RDS or Aurora. `aws` is the only supported value today, and it only applies to MySQL and PostgreSQL, not sqlite.

```yaml title="values.yaml for IAM-authenticated audit datastore"
config:
  audit:
    enabled: true
    dataStoreEndpoint: mysql://iam-user@tcp(hostname:3306)/database-name
    dataStoreIdentityProvider: aws
```

Omit the password from `dataStoreEndpoint` when using IAM authentication. The platform mints a new token periodically to stay ahead of expiry.

#### Verify the datastore with a CA file

Set `config.audit.dataStoreCAFile` to the path of a PEM-encoded CA bundle to verify the datastore's TLS certificate. The platform reads this file directly, so mount the Secret or ConfigMap containing it into the platform pod through the chart's top-level `volumes` and `volumeMounts`. This is the same approach as [`config.database`'s `caFile`](../../administer/clusters/advanced/external-database/external-database.mdx):

```yaml title="values.yaml for a CA-verified audit datastore"
volumes:
  - name: audit-datastore-ca
    secret:
      secretName: audit-datastore-ca
volumeMounts:
  - name: audit-datastore-ca
    mountPath: /etc/vcluster/audit-datastore-ca
    readOnly: true
config:
  audit:
    enabled: true
    dataStoreEndpoint: postgres://username:password@hostname:5432/database-name
    dataStoreCAFile: /etc/vcluster/audit-datastore-ca/ca.pem
```

The platform reads `dataStoreCAFile` once at startup. Rotating the mounted CA requires a platform pod restart to take effect.

:::warning TLS precedence
An explicit `sslmode=` (PostgreSQL) or `tls=` (MySQL) query parameter already present on `dataStoreEndpoint` always wins over `dataStoreCAFile`, silently. Remove the query parameter if you want `dataStoreCAFile` to take effect.

Without an explicit override:

- PostgreSQL defaults to `sslmode=require` (encrypted, but the server certificate isn't verified). Setting `dataStoreCAFile` upgrades this to `sslmode=verify-full`.
- MySQL has no TLS by default, unless `dataStoreIdentityProvider` is set, in which case it defaults to `tls=skip-verify`. Setting `dataStoreCAFile` upgrades either case to full certificate verification.

`dataStoreCAFile` applies regardless of `dataStoreIdentityProvider`, and has no effect on the internal sqlite backend.
:::

## View and export audit logs

By default, the platform logs audit events to the following locations:

- To a log file in JSON format located at `/var/lib/loft/audit.log` inside the platform container. Each line inside the log represents a single audit event.
- To an internal sqlite storage located at `/var/lib/loft/audit.db` inside the
platform container. This sqlite database is used to display audit log events in
the platform UI. By default audit events in the sqlite are not persisted, so
restarting the platform clears the database. See [Use a persistent database as platform audit backend](#use-a-persistent-database-as-platform-audit-backend) to configure a persistent MySQL backend instead.

### Enable audit sidecar

To export audit events to third-party systems, enable the audit log sidecar. It prints all audit events to `stdout` in a separate container, so you can watch and export them from there. You can only enable the sidecar through Helm values.

Create a `values.yaml` with the following contents:

```yaml title="values.yaml for audit sidecar"
audit:
  enableSideCar: true
```

This is the top-level `audit` field in `values.yaml`, not `config.audit`, so it cannot be set in **Platform > Platform Config > Config** (see [Enable auditing](#enable-auditing) for the distinction).

Update the Helm release:

```bash title="Update Helm release"
helm upgrade vcluster-platform vcluster-platform \
  --namespace vcluster-platform \
  --repo https://charts.loft.sh \
  --reuse-values \
  --values values.yaml
```

Wait until the platform has restarted, then view the audit logs:

```bash title="View audit logs"
kubectl logs -n vcluster-platform -l app=loft -c audit -f
```

## Audit logging for Regional Cluster Endpoints

[Regional Cluster Endpoints](../../administer/clusters/advanced/regional-cluster-endpoints.mdx) allow direct communication between users and clusters, bypassing the central platform instance. When this feature is enabled, the platform audit configuration is synced to each agent. Each platform agent propagates audit events it receives back to the central platform instance, which then logs it as a regular audit event. These "propagated" events can be identified by the `annotations.audit.loft.sh/sent-by-agent` identifier in an audit event.

To disable this behavior, set the audit config option `disableAgentSyncBack`.
